<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E99D4F"
    tools:context=".ActivityCodigo">

    <!-- HEADER -->
    <androidx.cardview.widget.CardView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_margin="12dp"
        app:cardCornerRadius="22dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EDD5B6">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="105dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/logo_hachiapp"
                android:src="@drawable/iconoprincipal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/app_name"
                android:textColor="#000"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView7"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!-- TITULO -->
    <TextView
        android:id="@+id/textcodigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/codigo_titulo"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#2E1B0E"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- SUBTITULO -->
    <TextView
        android:id="@+id/textSubVerificacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/codigo_subtitulo"
        android:textAlignment="center"
        android:textColor="#2E1B0E"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textcodigo" />

    <!-- CODIGO OTP -->
    <LinearLayout
        android:id="@+id/codigoContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/textSubVerificacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/editTextCodigo1"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="6dp"
            android:background="@drawable/bg_editartext_plantilla"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#120F0F"
            android:textSize="20sp"
            android:autofillHints="none"
            android:hint="@string/hint_otp_digit"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextCodigo2"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="6dp"
            android:background="@drawable/bg_editartext_plantilla"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#0F0D0D"
            android:textSize="20sp"
            android:autofillHints="none"
            android:hint="@string/hint_otp_digit"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextCodigo3"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="6dp"
            android:background="@drawable/bg_editartext_plantilla"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#1F1919"
            android:textSize="20sp"
            android:autofillHints="none"
            android:hint="@string/hint_otp_digit"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextCodigo4"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="6dp"
            android:background="@drawable/bg_editartext_plantilla"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#121010"
            android:textSize="20sp"
            android:autofillHints="none"
            android:hint="@string/hint_otp_digit"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <!-- BOTON -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVerificar"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#EDD5B7"
        android:text="@string/btn_verificar_codigo"
        android:textColor="#1D1717"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/codigoContainer" />

    <!-- IMAGEN -->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/desc_gatito"
        app:srcCompat="@drawable/gatito"
        app:layout_constraintTop_toBottomOf="@id/btnVerificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- REENVIAR -->
    <TextView
        android:id="@+id/ReenCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_reenviar_codigo"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>
